<resources>
    <string name="app_name">swoosh</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="onGoingAllOut">ON GOING ALL OUT</string>
    <string name="welcomeDescription">Find a team in your city &amp; dominate the league</string>
    <string name="getStartedButton">GET STARTED</string>
    <string name="defaultDesc">-</string>
    <string name="desiredLeague">Desired League :</string>
    <string name="mensButton">Mens</string>
    <string name="womenButton">Womens</string>
    <string name="coedButton">Co-ed</string>
    <string name="next">Next</string>
    <string name="i_am_a">I am a :</string>
    <string name="begineer">Begineer</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="default_search">Looking for Coed Beginer near you</string>
</resources>
